--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.11",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -44,6 +45,7 @@
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "typescript-plugin-css-modules": "^2.8.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
